# nemesis-ai

./: .pre-commit-config.yaml  LICENSE  README.md  main.py  pyproject.toml
src/: nodes.py  runner.py
